overflow issue resolved

--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@
      flex-direction: column;
      align-items: center;
      align-self: center;
+     overflow-x: hidden;
+     position: relative;
  }
 
  button{
